kubernetes/apps/efym-net/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: efym-net
  labels:
    app: efym-net
spec:
  replicas: 2
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: efym-net
  template:
    metadata:
      labels:
        app: efym-net
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: efym-net
              topologyKey: kubernetes.io/hostname
      containers:
      - name: efym-net
        image: ghcr.io/tw1zr99/efym.net:${EFYM_NET_IMAGE_TAG}
        # securityContext:
        #   runAsNonRoot: false
        #   # runAsUser: 1000
        #   readOnlyRootFilesystem: true
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            cpu: 250m
            memory: 256Mi
