kubernetes/apps/efym-net/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: efym-net
spec:
  selector:
    app: efym-net
  ports:
  - name: http
    targetPort: 80
    port: 80
