kubernetes/apps/efym-net/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: efym-net
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`${CLUSTER_DOMAIN}`)
      kind: Rule
      priority: 1
      services:
        - name: efym-net
          port: 80
    - match: Host(`${CLUSTER_DOMAIN}`) && PathPrefix(`/services`)
      kind: Rule
      priority: 10
      middlewares:
        - name: authelia
          namespace: authelia
      services:
        - name: efym-net
          port: 80
  tls:
    secretName: efym-net-tls
